Got thread to work. Need to clean up reading files

--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,9 @@
     <target name="compile">
         <mkdir dir="build/classes"/>
         <javac srcdir="src" destdir="build/classes"/>
+        <copy todir="build/classes/resources">
+            <fileset dir="src/resources" includes="*" />
+        </copy>
     </target>
 
     <target name="build_jar">
